--- a/public/templates/static/footer.html
+++ b/public/templates/static/footer.html
@@ -28,7 +28,9 @@
             <div class="col-lg-3 col-sm-3 col-md-3">
                 <ul class="nav">
                     <h3 translate>Restons connectés</h3>
-                    <li><a href=""><i class="fa fa-envelope"></i> <ff translate>Contacter l'assistance</ff> </a></li>
+                    <li><a href=""><i class="fa fa-envelope"></i>
+                        <ff translate>Contacter l'assistance</ff>
+                    </a></li>
                     <li><a href="https://www.facebook.com/eventmboa/"><i class="fa fa-facebook"></i> Facebook</a></li>
                     <li><a href="https://twitter.com/Event_Mboa"><i class="fa fa-twitter"></i> Twitter</a></li>
                     <li><a href=""><i class="fa fa-linkedin"></i> LinkedIn</a></li>
