--- a/public/templates/user/index.html
+++ b/public/templates/user/index.html
@@ -14,16 +14,26 @@
                         <div class="panel-heading">
                             <h4 class="">
                                 <a data-toggle="collapse" data-parent="#accordion" href="/#collapse1">
-                                    <i class="fa fa-gear"></i> <ff translate>Paramètres</ff></a>
+                                    <i class="fa fa-gear"></i>
+                                    <ff translate>Paramètres</ff>
+                                </a>
                             </h4>
                         </div>
                         <div id="collapse1" class="panel-collapse">
                             <ul class="nav">
-                                <li ng-class="{'active':choix=='compte'}" ng-click="choix='compte'"><a ui-sref="compte" translate>Coordonnées</a></li>
-                                <li ng-class="{'active':choix=='pass'}" ng-click="choix='pass'"><a ui-sref="pass" translate>Mot de passe</a></li>
-                                <li ng-class="{'active':choix=='sociaux'}" ng-click="choix='sociaux'"><a ui-sref="sociaux" translate>Paramètres sociaux</a></li>
-                                <li ng-class="{'active':choix=='om'}" ng-click="choix='om'"><a ui-sref="om" translate>Orange Money</a></li>
-                                <li ng-class="{'active':choix=='carte'}" ng-click="choix='carte'"><a ui-sref="carte" translate>Cartes bancaires</a></li>
+                                <li ng-class="{'active':choix=='compte'}" ng-click="choix='compte'"><a ui-sref="compte"
+                                                                                                       translate>Coordonnées</a>
+                                </li>
+                                <li ng-class="{'active':choix=='pass'}" ng-click="choix='pass'"><a ui-sref="pass"
+                                                                                                   translate>Mot de
+                                    passe</a></li>
+                                <li ng-class="{'active':choix=='sociaux'}" ng-click="choix='sociaux'"><a
+                                        ui-sref="sociaux" translate>Paramètres sociaux</a></li>
+                                <li ng-class="{'active':choix=='om'}" ng-click="choix='om'"><a ui-sref="om" translate>Orange
+                                    Money</a></li>
+                                <li ng-class="{'active':choix=='carte'}" ng-click="choix='carte'"><a ui-sref="carte"
+                                                                                                     translate>Cartes
+                                    bancaires</a></li>
                                 <li><a ui-sref="close" translate>Fermer le compte</a></li>
                             </ul>
                         </div>
@@ -32,14 +42,19 @@
                         <div class="panel-heading">
                             <h4 class="">
                                 <a data-toggle="collapse" data-parent="#accordion" href="/#collapse2">
-                                    <i class="fa fa-credit-card"></i> <ff translate>Paiements</ff></a>
+                                    <i class="fa fa-credit-card"></i>
+                                    <ff translate>Paiements</ff>
+                                </a>
                             </h4>
                         </div>
                         <div id="collapse2" class="panel-collapse collapse in">
                             <ul class="nav">
-                                <li ng-class="{'active':choix=='recap'}" ng-click="choix='recap'"><a ui-sref="recap" translate>Récapitulatif des paiements</a></li>
+                                <li ng-class="{'active':choix=='recap'}" ng-click="choix='recap'"><a ui-sref="recap"
+                                                                                                     translate>Récapitulatif
+                                    des paiements</a></li>
                                 <!--<li ng-class="{'active':choix=='frais'}" ng-click="choix='frais'"><a ui-sref="frais">Frais et crédit</a></li>-->
-                                <li ng-class="{'active':choix=='facture'}" ng-click="choix='facture'"><a ui-sref="facture" translate>Factures</a></li>
+                                <li ng-class="{'active':choix=='facture'}" ng-click="choix='facture'"><a
+                                        ui-sref="facture" translate>Factures</a></li>
                             </ul>
                         </div>
                     </div>
