--- a/public/templates/auth/reset.html
+++ b/public/templates/auth/reset.html
@@ -5,7 +5,8 @@
             Saisissez votre adresse e-mail et nous vous enverrons un lien par e-mail pour réinitialiser votre mot de passe.
         </p>
         <div class="form-group">
-            <input type="text" class="form-control" ng-model="auth.login" placeholder="{{'Adresse email'|translate}}" required/>
+            <input type="text" class="form-control" ng-model="auth.login" placeholder="{{'Adresse email'|translate}}"
+                   required/>
         </div>
         <div class="form-group text-center message">
             {{message}}
