--- a/public/templates/event/form-events.html
+++ b/public/templates/event/form-events.html
@@ -40,11 +40,13 @@
                         <label for="nom">
                             <ff translate>Non de l'événement</ff>
                             <span class="requis">*</span></label>
-                        <input type="text" id="nom" ng-model="e.titre" placeholder="{{'Donnez un titre court et distinctif'|translate}}" class="form-control"/>
+                        <input type="text" id="nom" ng-model="e.titre"
+                               placeholder="{{'Donnez un titre court et distinctif'|translate}}" class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label for="adresse" translate>Adresse </label>
-                        <input type="text" id="adresse" ng-model="e.adresse.lieu" placeholder="{{'Précisez où il est organisé'|translate}}" class="form-control"/>
+                        <input type="text" id="adresse" ng-model="e.adresse.lieu"
+                               placeholder="{{'Précisez où il est organisé'|translate}}" class="form-control"/>
                         <div>
                             <a ng-click="lieu='ligne'"><i class="fa fa-globe"></i>
                                 <ff translate>Evenement en ligne</ff>
@@ -58,16 +60,21 @@
                         <div class="row" style="margin-top: 10px" ng-if="lieu=='adresse'">
                             <div class="col-lg-8">
                                 <div class="form-group">
-                                    <input type="text" ng-model="e.adresse.adresse1" placeholder="{{'Adresse 1'|translate}}" class="form-control"/>
-                                    <input type="text" ng-model="e.adresse.adresse2" placeholder="{{'Adresse 2'|translate}}" class="form-control"/>
-                                    <input type="text" ng-model="e.adresse.ville" placeholder="{{'Ville'|translate}}" class="form-control"/>
+                                    <input type="text" ng-model="e.adresse.adresse1"
+                                           placeholder="{{'Adresse 1'|translate}}" class="form-control"/>
+                                    <input type="text" ng-model="e.adresse.adresse2"
+                                           placeholder="{{'Adresse 2'|translate}}" class="form-control"/>
+                                    <input type="text" ng-model="e.adresse.ville" placeholder="{{'Ville'|translate}}"
+                                           class="form-control"/>
 
                                     <div class="row">
                                         <div class="col-lg-6 col-sm-6">
-                                            <input type="text" ng-model="e.adresse.region" placeholder="{{'Région'|translate}}" class="form-control"/>
+                                            <input type="text" ng-model="e.adresse.region"
+                                                   placeholder="{{'Région'|translate}}" class="form-control"/>
                                         </div>
                                         <div class="col-lg-6 col-sm-6">
-                                            <input type="text" ng-model="e.adresse.boite" placeholder="{{'Boîte postale'|translate}}" class="form-control"/>
+                                            <input type="text" ng-model="e.adresse.boite"
+                                                   placeholder="{{'Boîte postale'|translate}}" class="form-control"/>
                                         </div>
                                     </div>
                                     <select ng-model="e.adresse.pays" class="form-control"
@@ -139,7 +146,8 @@
                                 <input type="file" name="icone_boutique" id="id_icone_boutique"  class="hide">
                             </div>
                             <div class="col-lg-3">
-                                <p class="small-text" translate>Nous recommandons d'utiliser une image d'au moins 2160 x 1080 px (ratio 2:1) ne dépassant pas 10 Mo</p>
+                                <p class="small-text" translate>Nous recommandons d'utiliser une image d'au moins 2160 x
+                                    1080 px (ratio 2:1) ne dépassant pas 10 Mo</p>
                             </div>
                         </div>
 
@@ -167,7 +175,8 @@
                             </select>
                         </div>
                         <div ng-if="user=='new'||user=='edit'">
-                            <input type="text" ng-model="e.oragnisateur.name" placeholder="{{'Nom de l'organisateur'|translate}}" class="form-control"/>
+                            <input type="text" ng-model="e.oragnisateur.name"
+                                   placeholder="{{'Nom de l'organisateur'|translate}}" class="form-control"/>
                         </div>
                     </div>
 
@@ -188,18 +197,21 @@
                     <div class="form-group check">
                         <div class="checkbox">
                             <label for="inclure">
-                                <input type="checkbox" ng-model="inclure" id="inclure"> <ff translate >Inclure des liens vers mes pages Facebook et Twitter</ff>
+                                <input type="checkbox" ng-model="inclure" id="inclure">
+                                <ff translate>Inclure des liens vers mes pages Facebook et Twitter</ff>
                             </label>
                         </div>
                         <div class="row-fluid" ng-if="inclure">
                             <div class="col-lg-12">
                                 <div class="form-group">
                                     <label><i class="fa fa-facebook"></i> Facebook</label>
-                                    <input type="text" class="form-control" ng-model="e.organisateur.lien_facebook" placeholder="{{'Lien vers page Facebook'|translate}}"/>
+                                    <input type="text" class="form-control" ng-model="e.organisateur.lien_facebook"
+                                           placeholder="{{'Lien vers page Facebook'|translate}}"/>
                                 </div>
                                 <div class="form-group">
                                     <label><i class="fa fa-twitter"></i> Twitter</label>
-                                    <input type="text" class="form-control" ng-model="e.organisateur.lien_facebook" placeholder="{{'Lien vers page Twitter'|translate}}"/>
+                                    <input type="text" class="form-control" ng-model="e.organisateur.lien_facebook"
+                                           placeholder="{{'Lien vers page Twitter'|translate}}"/>
                                 </div>
                             </div>
                         </div>
@@ -219,7 +231,8 @@
                 <div class="col-lg-9 col-sm-9" style="margin-top: 20px">
                     <div class="form-group text-center">
                         <div ng-if="type!='Gratuit'&& type!='Payant'">
-                            <div style="margin-bottom: 15px" translate>Avec quel type de billet souhaitez-vous commencer?
+                            <div style="margin-bottom: 15px" translate>Avec quel type de billet souhaitez-vous
+                                commencer?
                             </div>
                             <div class="btn-group">
                                 <button class="btn btn-main btn-reverse"
@@ -252,7 +265,9 @@
                                 </thead>
                                 <tbody>
                                     <tr ng-repeat="b in billets">
-                                        <td><input type="text" ng-model="b.nom" placeholder="{{'Billet à tarif préférentiel, RSVP...'|translate}}" class="form-control"/></td>
+                                        <td><input type="text" ng-model="b.nom"
+                                                   placeholder="{{'Billet à tarif préférentiel, RSVP...'|translate}}"
+                                                   class="form-control"/></td>
                                         <td><input type="number" min="0" step="1" ng-model="b.quantite" placeholder="100" class="form-control"/></td>
                                         <td ng-if="b.type=='Gratuit'">{{b.type}}</td>
                                         <td ng-if="b.type=='Payant'">
@@ -394,9 +409,17 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="intro-message">
-                            <h4 class="date-titre"><ff translate >Le</ff> {{event.date_debut}} <ff translate >à</ff> {{event.adresse.ville}}</h4>
+                            <h4 class="date-titre">
+                                <ff translate>Le</ff>
+                                {{event.date_debut}}
+                                <ff translate>à</ff>
+                                {{event.adresse.ville}}
+                            </h4>
                             <h1>{{event.name}}</h1>
-                            <h4><ff translate >Par</ff> : {{event.organizer.name}} </h4>
+                            <h4>
+                                <ff translate>Par</ff>
+                                : {{event.organizer.name}}
+                            </h4>
                         </div>
                     </div>
 
@@ -415,7 +438,9 @@
                             </div>
                             <div class="col-lg-6" style="text-align: right">
                                 <div class="btn-white">{{event.tickets[0].amount}} Fcfa</div>
-                                <button class="btn btn-main btn-green" data-toggle="modal" href="/#inscriptionModal" translate >S'inscrire</button>
+                                <button class="btn btn-main btn-green" data-toggle="modal" href="/#inscriptionModal"
+                                        translate>S'inscrire
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -428,7 +453,7 @@
                 <div class="row-fluid">
                     <div class="col-lg-8">
                         <dl>
-                            <dt translate >DESCRIPTION</dt>
+                            <dt translate>DESCRIPTION</dt>
                             <dd>
                                 <p>{{event.description}}</p>
                             </dd>
@@ -451,11 +476,15 @@
                     <div class="col-lg-4">
                         <dl>
                             <dt translate>DATE ET HEURE</dt>
-                            <dd><ff translate >du</ff> <strong>{{event.date_debut}}</strong> <ff translate >au</ff> <strong>{{event.date_fin}}</strong></dd>
+                            <dd>
+                                <ff translate>du</ff>
+                                <strong>{{event.date_debut}}</strong>
+                                <ff translate>au</ff>
+                                <strong>{{event.date_fin}}</strong></dd>
                         </dl>
 
                         <dl>
-                            <dt translate >ADRESSE</dt>
+                            <dt translate>ADRESSE</dt>
                             <dd>{{event.adress.post_box}} {{event.adress.name}}</dd>
                             <dd>{{event.adress.street}}</dd>
                             <dd>{{event.town.name}}</dd>
@@ -473,7 +502,9 @@
                         <div class="text-center">
                             <div class="divider"></div>
                             <h3 class="bold">{{event.organizer.name}}</h3>
-                            <div><ff translate >Organisateur de</ff> <strong>{{event.name}}</strong></div>
+                            <div>
+                                <ff translate>Organisateur de</ff>
+                                <strong>{{event.name}}</strong></div>
                             <div class="image">
                                 <img src="{{event.organizer.image}}" alt="" title="{{event.organizer.name}}"/>
                             </div>
@@ -481,8 +512,13 @@
                                 {{event.organizer.description}}
                             </p>
                             <p class="option">
-                                <a ui-sref="profil{{event.organizer.name}}"><i class="fa fa-navicon"></i> <ff translate >Profil</ff></a>
-                                <a ui-sref="contact-organisateur{{event.organisateur.email}}"><i class="fa fa-envelope-o"></i> <ff translate >Contactez</ff></a>
+                                <a ui-sref="profil{{event.organizer.name}}"><i class="fa fa-navicon"></i>
+                                    <ff translate>Profil</ff>
+                                </a>
+                                <a ui-sref="contact-organisateur{{event.organisateur.email}}"><i
+                                        class="fa fa-envelope-o"></i>
+                                    <ff translate>Contactez</ff>
+                                </a>
                             </p>
                         </div>
                     </div>
