--- a/public/templates/user/profil.html
+++ b/public/templates/user/profil.html
@@ -5,8 +5,13 @@
                 <h1 translate>Profil d'organisateur</h1>
             </div>
             <div class="col-lg-4 col-sm-4 col-md-4" style="padding-top: 20px">
-                <button class="btn btn-main btn-reverse" ng-click="nouveauOrganisateur()"><i class="fa fa-plus"></i> <ff translate>Créer</ff></button>
-                <button class="btn btn-main btn-reverse" data-toggle="modal" href="/#profilModal"><i class="fa fa-edit"></i> <ff translate>Editer</ff></button>
+                <button class="btn btn-main btn-reverse" ng-click="nouveauOrganisateur()"><i class="fa fa-plus"></i>
+                    <ff translate>Créer</ff>
+                </button>
+                <button class="btn btn-main btn-reverse" data-toggle="modal" href="/#profilModal"><i
+                        class="fa fa-edit"></i>
+                    <ff translate>Editer</ff>
+                </button>
             </div>
         </div>
         <div class="row">
@@ -14,7 +19,7 @@
                 <div class="col-lg-3 text-center">
                     <p style="padding: 10px;background: white;border: 1px solid #eee;">
                         <i ng-if="no_image && organisateur.image==undefined" class="fa fa-user fa-4x" style="font-size: 8em;"></i>
-                        <img  src="{{organisateur.image}}" id="image" alt="" style="width: 100%"/>
+                        <img src="{{organisateur.image}}" id="image" alt="" style="width: 100%"/>
                     </p>
                     <p style="font-size: 15px" translate>
                         JPG, GIF ou PNG de moins de 1MO. Ce sont les images carrées qui rendent le mieux.
@@ -39,23 +44,28 @@
                     </div>
                     <div class="form-group">
                         <label translate>Page Facebook</label>
-                        <input type="text" ng-model="organisateur.facebook" placeholder="facebook.com/" class="form-control"/>
+                        <input type="text" ng-model="organisateur.facebook" placeholder="facebook.com/"
+                               class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label translate>Page Twitter</label>
-                        <input type="text" ng-model="organisateur.twitter" placeholder="twitter.com/" class="form-control"/>
+                        <input type="text" ng-model="organisateur.twitter" placeholder="twitter.com/"
+                               class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label translate>Page Google+</label>
-                        <input type="text" ng-model="organisateur.google" placeholder="plus.google.com/" class="form-control"/>
+                        <input type="text" ng-model="organisateur.google" placeholder="plus.google.com/"
+                               class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label translate>Page Instagram</label>
-                        <input type="text" ng-model="organisateur.instagram" placeholder="instagram.com/" class="form-control"/>
+                        <input type="text" ng-model="organisateur.instagram" placeholder="instagram.com/"
+                               class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label translate>Page LinkedIn</label>
-                        <input type="text" ng-model="organisateur.linkedin" placeholder="linkedin.com/" class="form-control"/>
+                        <input type="text" ng-model="organisateur.linkedin" placeholder="linkedin.com/"
+                               class="form-control"/>
                     </div>
                     <div class="button-group">
                         <button class="btn btn-main bold" type="submit" translate>Sauvegarder</button>
@@ -76,30 +86,30 @@
             <div class="row-fuild">
                 <table class="table">
                     <thead>
-                        <th translate>Nom</th>
-                        <th translate>Actions</th>
+                    <th translate>Nom</th>
+                    <th translate>Actions</th>
                     </thead>
                     <tbody>
-                        <tr dir-paginate="o in organisateurs | orderBy : '-name' : true| itemsPerPage: par_page ">
-                            <td>{{o.name}}</td>
-                            <td>
+                    <tr dir-paginate="o in organisateurs | orderBy : '-name' : true| itemsPerPage: par_page ">
+                        <td>{{o.name}}</td>
+                        <td>
                                 <span ng-click="choixOrganisateur(o)">
                                     <i class="fa fa-edit fa-lg"></i></span>
-                                &nbsp;
-                                &nbsp;
-                                <span ng-click="supprimer(o)"><i class="fa fa-trash fa-lg"></i></span>
-                            </td>
-                        </tr>
+                            &nbsp;
+                            &nbsp;
+                            <span ng-click="supprimer(o)"><i class="fa fa-trash fa-lg"></i></span>
+                        </td>
+                    </tr>
                     </tbody>
                 </table>
-                <div class="text-center" >
+                <div class="text-center">
                     <dir-pagination-controls></dir-pagination-controls>
                 </div>
             </div>
         </div>
         <!--<div class="modal-footer">-->
-            <!--<button class="btn btn-main" type="submit" translate>Enregistrer</button>-->
-            <!--<button id="close" class="btn btn-main hide" data-dismiss="modal" translate>Fermer</button>-->
+        <!--<button class="btn btn-main" type="submit" translate>Enregistrer</button>-->
+        <!--<button id="close" class="btn btn-main hide" data-dismiss="modal" translate>Fermer</button>-->
         <!--</div>&lt;!&ndash; /.modal-content &ndash;&gt;-->
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
