--- a/public/templates/user/sociaux.html
+++ b/public/templates/user/sociaux.html
@@ -4,28 +4,43 @@
         <div class="col-lg-9">
             <form ng-submit="enregistrerSociaux(social)">
                 <div class="form-group">
-                    <h3><i class="fa fa-facebook"></i> <ff translate>Page Facebook</ff></h3>
-                    <input  type="url" ng-model="compte.person.facebook" placeholder="http://www.facebook.com/" class="form-control"/>
+                    <h3><i class="fa fa-facebook"></i>
+                        <ff translate>Page Facebook</ff>
+                    </h3>
+                    <input type="url" ng-model="compte.person.facebook" placeholder="http://www.facebook.com/"
+                           class="form-control"/>
                 </div>
 
                 <div class="form-group">
-                    <h3><i class="fa fa-twitter"></i> <ff translate>Page Twitter</ff></h3>
-                    <input  type="url" ng-model="compte.person.twitter" placeholder="http://www.twitter.com/" class="form-control"/>
+                    <h3><i class="fa fa-twitter"></i>
+                        <ff translate>Page Twitter</ff>
+                    </h3>
+                    <input type="url" ng-model="compte.person.twitter" placeholder="http://www.twitter.com/"
+                           class="form-control"/>
                 </div>
 
                 <div class="form-group">
-                    <h3><i class="fa fa-google-plus"></i><ff translate>Page Google+</ff> </h3>
-                    <input  type="url" ng-model="compte.person.google" placeholder="http://www.facebook.com/" class="form-control"/>
+                    <h3><i class="fa fa-google-plus"></i>
+                        <ff translate>Page Google+</ff>
+                    </h3>
+                    <input type="url" ng-model="compte.person.google" placeholder="http://www.facebook.com/"
+                           class="form-control"/>
                 </div>
 
                 <div class="form-group">
-                    <h3><i class="fa fa-instagram"></i><ff translate>Page Instagram</ff> </h3>
-                    <input  type="url" ng-model="compte.person.instagram" placeholder="http://www.instagram.com/" class="form-control"/>
+                    <h3><i class="fa fa-instagram"></i>
+                        <ff translate>Page Instagram</ff>
+                    </h3>
+                    <input type="url" ng-model="compte.person.instagram" placeholder="http://www.instagram.com/"
+                           class="form-control"/>
                 </div>
 
                 <div class="form-group">
-                    <h3><i class="fa fa-linkedin-square"></i> <ff translate>Page LinkedIn</ff></h3>
-                    <input  type="url" ng-model="compte.person.linkedin" placeholder="http://www.linkedin.com/" class="form-control"/>
+                    <h3><i class="fa fa-linkedin-square"></i>
+                        <ff translate>Page LinkedIn</ff>
+                    </h3>
+                    <input type="url" ng-model="compte.person.linkedin" placeholder="http://www.linkedin.com/"
+                           class="form-control"/>
                 </div>
 
                 <button type="submit" class="btn btn-main" translate>sauvegarder</button>
